# rag-ingestion-pipeline

./: .gitignore  Readme.md  ingestion_pipeline.py  pyproject.toml
docs/: google.txt  microsoft.txt  nvidia.txt  spacex.txt  tesla.txt
